vbnc/vbnc/tests/Errors/32006-7.vb
Imports System
Class T
    Const M_String As uint16 = "c"c
End Class